# Fingerprint_Modeling

./: CMakeLists.txt  Readme.md
docs/: CMakeLists.txt  doxyfilerc  mainpage.md
include/: GeometricalWarps.h  Image.h  LinearFiltering.h  RegistrationOptimization.h  Restoration.h  SaveManyImages.h  ShowManyImages.h  Simulation.h
src/: CMakeLists.txt  GeometricalWarps.cpp  Image.cpp  LinearFiltering.cpp  MorphologicalFiltering.cpp  RegistrationOptimization.cpp  Restoration.cpp  Simulation.cpp
tests/: CMakeLists.txt  SimulationGeometry.cpp  SimulationLinearFiltering.cpp  SimulationPressure.cpp  SimulationRegistration.cpp  SimulationWetnessDryness.cpp  TestRestoration.cpp
